updated console and notification push